# ros_opencv_examples

./: README.md
opencv_examples/: CMakeLists.txt  package.xml
opencv_examples/examples/: ReadMe.txt  cam_capture1.cpp  cam_capture2.cpp  cam_record.cpp  combine_images.cpp  contour_canny.cpp  contour_sobel.cpp  filter_image.cpp  histogram_cmp.cpp  hough_trans.cpp  image_mask.cpp  laplace_op.cpp  learn_mat.cpp  load_image.cpp  reduce_color.cpp  video_modif.cpp
opencv_examples/include/: empty
opencv_examples/launch/: cam.launch  intellihome_kinect_detect.launch  open_kinect.launch
opencv_examples/res/: SimpleWindow.ui
