<?xml version="1.0"?>
<package>
  <name>opencv_examples</name>
  <version>1.0.1</version>
  <description>A ROS package containing a series of opencv examples</description>
  <maintainer email="qiuzhaopeng@gmail.com">Zhaopeng QIU</maintainer>
  <license>TODO</license>          
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libqt4-opengl-dev</build_depend>


  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>cvBlob</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pcl_conversions</run_depend> 
  <run_depend>pcl_ros</run_depend> 
  <run_depend>python_qt_binding</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libqt4-opengl-dev</run_depend>


</package>
